--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -14,8 +14,8 @@ jobs:
         with:
           args: --acl public-read --follow-symlinks --delete
         env:
-          AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_S3_BUCKET: ${{ aws.secrets.AWS_S3_BUCKET }}
+          AWS_ACCESS_KEY_ID: ${{ aws.secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ aws.secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: "us-west-2" # optional: defaults to us-east-1
           SOURCE_DIR: "public" # optional: defaults to entire repository
